--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -13,6 +13,7 @@
     background-position-x:  20px;
     background-repeat: repeat;   
     background-attachment: fixed;    
+    overflow: hidden;	
 }
 
 .home-header-container {
