--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -6,6 +6,7 @@
     background-size: cover;  
     background-image: url('../../assets/../assets/grid_background.png');
     background-attachment: fixed;   
+    overflow: hidden;	
 }
 
 .profile-header-container {
